--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 						<li ui-sref-active="active"><a ui-sref="main">Home</a></li>
 						<li ui-sref-active="active"><a ui-sref="validate">Validate</a></li>
 						<li ui-sref-active="active"><a ui-sref="center">Center</a></li>
+						<li ui-sref-active="active"><a ui-sref="tmce">Tiny MCE</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
@@ -59,6 +60,8 @@
 		<script src="bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
 		<script src="bower_components/select2/select2.js"></script>
 		<script src="bower_components/angular-ui-select2/src/select2.js"></script>
+		<script src="bower_components/tinymce/tinymce.min.js"></script>
+		<script src="bower_components/angular-ui-tinymce/src/tinymce.js"></script>
 		<!-- endbower -->
 
 		<script src="bower_components/angular-i18n/angular-locale_it-it.js"></script>
@@ -69,6 +72,7 @@
 		<script src="app/scripts/main.js"></script>
 		<script src="app/scripts/validate.js"></script>
 		<script src="app/scripts/center.js"></script>
+		<script src="app/scripts/tmce.js"></script>
 		<!-- Live reload file -->
 		<script src="//localhost:35729/livereload.js"></script>
 	</body>
