--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<!-- endbower -->
 
 		<link rel="stylesheet" href="bower_components/select2/select2-bootstrap.css" />
+		<link rel="stylesheet" href="app/css/l0.css">
 		<link rel="stylesheet" href="app/css/site.css">
 	</head>
 	<body ng-app="app">
@@ -32,6 +33,8 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li ui-sref-active="active"><a ui-sref="main">Home</a></li>
+						<li ui-sref-active="active"><a ui-sref="live">Live Tiles</a></li>
+						<li ui-sref-active="active"><a ui-sref="sp">SP View</a></li>
 						<li ui-sref-active="active"><a ui-sref="validate">Validate</a></li>
 						<li ui-sref-active="active"><a ui-sref="center">Center</a></li>
 						<li ui-sref-active="active"><a ui-sref="tmce">Tiny MCE</a></li>
@@ -70,9 +73,11 @@
 		<script src="app/directives/sxvalidate.js"></script>
 		<script src="app/directives/sxerrorreport.js"></script>
 		<script src="app/scripts/main.js"></script>
+		<script src="app/scripts/live.js"></script>
 		<script src="app/scripts/validate.js"></script>
 		<script src="app/scripts/center.js"></script>
 		<script src="app/scripts/tmce.js"></script>
+		<script src="app/scripts/spview.js"></script>
 		<!-- Live reload file -->
 		<script src="//localhost:35729/livereload.js"></script>
 	</body>
